# frust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  index.html  output.css  styles.css  tailwind.config.js  tailwind.css
src/: components.rs  file.rs  header.rs  lib.rs  main.rs  openfile.rs  tailwind.css
src/components/: archive_view.rs  file_list.rs  file_view.rs  open_archive.rs  open_file.rs
